# inplace

./: inplace.py  setup.cfg  setup.py
inplace/: __init__.py  inplace.py
