[metadata]
author = Danilo Horta
author_email = danilo.horta@gmail.com
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
description = Find and replace files interactively
download_url = https://github.com/horta/inplace
keywords = find, replace, file, sed, perl, regex
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Danilo Horta
platforms = Windows, MacOS, Linux
maintainer_email = danilo.horta@gmail.com
name = inplace
url = https://github.com/horta/inplace
version = attr: version.get

[options]
zip_safe = True
include_package_data = True
packages = find:
    pytest-runner>=4.2
install_requires =
    click>=6.0
    pytest>=3.5.1

[aliases]
test = pytest

[tool:pytest]
addopts =
    -x
    --doctest-modules
    --doctest-glob='*.rst'
    --ignore="setup.py"
norecursedirs = .eggs .git *.egg-info build .ropeproject doc/_build
pep8ignore = E402 E501

[flake8]
ignore = E501 E741 E203

[doc8]
max-line-length = 88
